# blackjack-trainer

./: README.md  color_trainer.py  pyproject.toml
src/blackjack_trainer/: color_trainer.py
