[project]
name = "blackjack-trainer"
version = "0.1.0"
description = "Terminal trainers for memorizing blackjack basic strategy (Dealer Stands Soft 17)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
blackjack-trainer = "blackjack_trainer.color_trainer:main"

[dependency-groups]
dev = ["ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blackjack_trainer"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
